# vps8

./: README.md  main.py  pyproject.toml  vps8_dns.py
src/: actions.py  api.py  config.py  ui.py
vps8_core/: __init__.py  actions.py  api.py
